Tue May 15 04:35:10 BST 2007  Olly Betts <olly@survex.com>

	* php/docs/bindings.html: Add note about Unicode support.

Mon May 14 19:42:06 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/smoketest.py: Fix query tests to match the output of the
	  new query parser.

Mon May 14 16:16:38 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/docs/bindings.html: Fix typo - NFKC is definitely probably
	  the form you want.

Mon May 14 15:34:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/pythontest.py,python/smoketest.py: Fix pythontest and
	  smoketest to expect what I think should be the correct output.
	  smoketest still doesn't pass, sadly, because the PARTIAL option
	  isn't fully implemented for the new scheme yet.

Sun May 13 04:55:30 BST 2007  Olly Betts <olly@survex.com>

	* java/org/xapian/XapianJNI.java,tcl8/docs/bindings.html: "writeable"
	  -> "writable".

Sun May 13 04:50:13 BST 2007  Olly Betts <olly@survex.com>

	* python/docs/bindings.html: "agnositc" -> "agnostic", and capitalise
	  "Xapian" for consistency.

Sat May 12 22:04:07 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: If SWIG has been explicitly specified (in the
	  environment or with `./configure SWIG=xxx') then downgrade the
	  AC_MSG_ERROR() if the version is wrong to a warning.  Also,
	  if no version is read, then say "(you have an unknown version)"
	  rather than "(you have )".

Thu May 10 18:18:32 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tcl8/except.i: Fix for change to return type of
	  Error::get_type().

Wed May 09 17:20:25 BST 2007  Olly Betts <olly@survex.com>

	* csharp/Makefile.am: Add TermGenerator.cs to list of generated C#
	  sources.

Wed May 09 16:44:50 BST 2007  Olly Betts <olly@survex.com>

	* java-swig/Makefile.am: Update for TermGenerator class.
	* ./: Update svn:ignore for TermGenerator class and xapian_wrap.stamp.

Tue May 08 19:58:04 BST 2007  Olly Betts <olly@survex.com>
