@@ -1,3 +1,8 @@
+Tue May 15 04:41:15 BST 2007  Olly Betts <olly@survex.com>
+
+	* tcl8/docs/bindings.html: Add Unicode section, documenting the issue
+	  with ASCII nul.
+
 Tue May 15 04:35:10 BST 2007  Olly Betts <olly@survex.com>
 
 	* php/docs/bindings.html: Add note about Unicode support.
